--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -4,3 +4,5 @@ title: Certificates
 weight: 3
 permalink: /certificates/
 ---
+
+<iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="800" height="600"></iframe>
