--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -5,4 +5,32 @@ weight: 3
 permalink: /certificates/
 ---
 
-<iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="800" height="600"></iframe>
+
+<style>
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .column {
+        flex: 1;
+        padding: 10px;
+        text-align: center;
+    }
+</style>
+
+<div class="container">
+    <div class="column">
+        <img src="sertifikat1.jpg" alt="Sertifikat 1">
+        <p>Sertifikat 1</p>
+    </div>
+    <div class="column">
+        <img src="sertifikat2.jpg" alt="Sertifikat 2">
+        <p>Sertifikat 2</p>
+    </div>
+    <div class="column">
+        <img src="sertifikat3.jpg" alt="Sertifikat 3">
+        <p>Sertifikat 3</p>
+    </div>
+    </div>
