--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -5,32 +5,16 @@ weight: 3
 permalink: /certificates/
 ---
 
-
-<style>
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .column {
-        flex: 1;
-        padding: 10px;
-        text-align: center;
-    }
-</style>
-
 <div class="container">
-    <div class="column">
-        <img src="sertifikat1.jpg" alt="Sertifikat 1">
-        <p>Sertifikat 1</p>
+    <div class="row">
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="300"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Computer_Hardware_Basics.pdf" width="100%" height="300"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="300"></iframe>
+        </div>
     </div>
-    <div class="column">
-        <img src="sertifikat2.jpg" alt="Sertifikat 2">
-        <p>Sertifikat 2</p>
-    </div>
-    <div class="column">
-        <img src="sertifikat3.jpg" alt="Sertifikat 3">
-        <p>Sertifikat 3</p>
-    </div>
-    </div>
+</div>
