--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -8,13 +8,43 @@ permalink: /certificates/
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="350"></iframe>
+            <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="320"></iframe>
         </div>
         <div class="col-md-4">
-            <iframe src="/assets/certificates/Certificate_Computer_Hardware_Basics.pdf" width="100%" height="350"></iframe>
+            <iframe src="/assets/certificates/Certificate_Computer_Hardware_Basics.pdf" width="100%" height="320"></iframe>
         </div>
         <div class="col-md-4">
-            <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="350"></iframe>
+            <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Endpoint_Security.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Ethical_Hacker.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Linux_Essentials.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Network_Defense.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Networking_Basics.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Operating_Systems_Basics.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Python_Essentials_1.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
         </div>
     </div>
 </div>
