--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -8,6 +8,17 @@ permalink: /certificates/
 <div class="container">
     <div class="row">
         <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Python_Essentials_1.pdf" width="100%" height="320"></iframe>
+        </div>
+        <div class="col-md-4">
+            <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="320"></iframe>
         </div>
         <div class="col-md-4">
@@ -16,6 +27,8 @@ permalink: /certificates/
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="320"></iframe>
         </div>
+    </div>
+    <div class="row">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Endpoint_Security.pdf" width="100%" height="320"></iframe>
         </div>
@@ -25,6 +38,8 @@ permalink: /certificates/
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.pdf" width="100%" height="320"></iframe>
         </div>
+    </div>
+    <div class="row">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Linux_Essentials.pdf" width="100%" height="320"></iframe>
         </div>
@@ -34,17 +49,10 @@ permalink: /certificates/
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Networking_Basics.pdf" width="100%" height="320"></iframe>
         </div>
+    </div>
+    <div class="row">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Operating_Systems_Basics.pdf" width="100%" height="320"></iframe>
-        </div>
-        <div class="col-md-4">
-            <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
-        </div>
-        <div class="col-md-4">
-            <iframe src="/assets/certificates/Certificate_Python_Essentials_1.pdf" width="100%" height="320"></iframe>
-        </div>
-        <div class="col-md-4">
-            <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
         </div>
     </div>
 </div>
