--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -5,7 +5,7 @@ weight: 3
 permalink: /certificates/
 ---
 
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
@@ -17,7 +17,7 @@ permalink: /certificates/
             <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="320"></iframe>
         </div>
