--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -28,7 +28,7 @@ permalink: /certificates/
             <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="320"></iframe>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Endpoint_Security.pdf" width="100%" height="320"></iframe>
         </div>
@@ -39,7 +39,7 @@ permalink: /certificates/
             <iframe src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.pdf" width="100%" height="320"></iframe>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Linux_Essentials.pdf" width="100%" height="320"></iframe>
         </div>
@@ -50,7 +50,7 @@ permalink: /certificates/
             <iframe src="/assets/certificates/Certificate_Networking_Basics.pdf" width="100%" height="320"></iframe>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Operating_Systems_Basics.pdf" width="100%" height="320"></iframe>
         </div>
