add : Title Certificate

--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -9,12 +9,15 @@ permalink: /certificates/
     <div class="row">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate PCAP</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Python_Essentials_1.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Python Essentials 1</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Python Essentials 2</h5>
         </div>
     </div>
     <div class="row mt-4">
