Add : Title Certificate

--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -23,39 +23,49 @@ permalink: /certificates/
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Agile Project Management</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Computer_Hardware_Basics.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Computer Hardware Basic</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Cyber Threat Management</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Endpoint_Security.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Endpoint Security</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Ethical_Hacker.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Ethical Hacker</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Introduction to Cybersecurity</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Linux_Essentials.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Linux Essentials</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Network_Defense.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Network Defense</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Networking_Basics.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Networking Basic</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Operating_Systems_Basics.pdf" width="100%" height="320"></iframe>
+            <h5 class="text-center">Certificate Operating Systems Basics</h5>
         </div>
     </div>
 </div>
