--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Certificates
-weight: 3
+weight: 2
 permalink: /certificates/
 ---
 
@@ -9,63 +9,63 @@ permalink: /certificates/
     <div class="row">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate PCAP</h5>
+            <h5 class="text-center">PCAP</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Python_Essentials_1.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Python Essentials 1</h5>
+            <h5 class="text-center">Python Essentials 1</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Python Essentials 2</h5>
+            <h5 class="text-center">Python Essentials 2</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Agile Project Management</h5>
+            <h5 class="text-center">Agile Project Management</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Computer_Hardware_Basics.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Computer Hardware Basic</h5>
+            <h5 class="text-center">Computer Hardware Basic</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Cyber Threat Management</h5>
+            <h5 class="text-center">Cyber Threat Management</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Endpoint_Security.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Endpoint Security</h5>
+            <h5 class="text-center">Endpoint Security</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Ethical_Hacker.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Ethical Hacker</h5>
+            <h5 class="text-center">Ethical Hacker</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Introduction to Cybersecurity</h5>
+            <h5 class="text-center">Introduction to Cybersecurity</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Linux_Essentials.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Linux Essentials</h5>
+            <h5 class="text-center">Linux Essentials</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Network_Defense.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Network Defense</h5>
+            <h5 class="text-center">Network Defense</h5>
         </div>
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Networking_Basics.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Networking Basic</h5>
+            <h5 class="text-center">Networking Basic</h5>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
             <iframe src="/assets/certificates/Certificate_Operating_Systems_Basics.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Certificate Operating Systems Basics</h5>
+            <h5 class="text-center">Operating Systems Basics</h5>
         </div>
     </div>
 </div>
