--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -7,65 +7,65 @@ permalink: /certificates/
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_PCAP.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">PCAP</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_PCAP.jpg" class="img-fluid" alt="Sertifikat 1">
+            <h5 class="text-center">Sertifikat 1</h5>
         </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Python_Essentials_1.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Python Essentials 1</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Python_Essentials_1.jpg" class="img-fluid" alt="Sertifikat 2">
+            <h5 class="text-center">Sertifikat 2</h5>
         </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Python_Essentials_2.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Python Essentials 2</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Agile_Project-Management.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Agile Project Management</h5>
-        </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Computer_Hardware_Basics.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Computer Hardware Basic</h5>
-        </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Cyber_Threat_Management.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Cyber Threat Management</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Python_Essentials_2.jpg" class="img-fluid" alt="Sertifikat 3">
+            <h5 class="text-center">Sertifikat 3</h5>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Endpoint_Security.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Endpoint Security</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Ethical_Hacker.jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center">Sertifikat 4</h5>
         </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Ethical_Hacker.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Ethical Hacker</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Linux_Essentials.jpg" class="img-fluid" alt="Sertifikat 5">
+            <h5 class="text-center">Sertifikat 5</h5>
         </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Introduction to Cybersecurity</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Linux_Essentials.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Linux Essentials</h5>
-        </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Network_Defense.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Network Defense</h5>
-        </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Networking_Basics.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Networking Basic</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Endpoint_Security.jpg" class="img-fluid" alt="Sertifikat 6">
+            <h5 class="text-center">Sertifikat 6</h5>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6 mb-3">
-            <iframe src="/assets/certificates/Certificate_Operating_Systems_Basics.pdf" width="100%" height="320"></iframe>
-            <h5 class="text-center">Operating Systems Basics</h5>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Agile_Project-Management.jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center">Sertifikat 4</h5>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Computer_Hardware_Basics.jpg" class="img-fluid" alt="Sertifikat 5">
+            <h5 class="text-center">Sertifikat 5</h5>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Cyber_Threat_Management.jpg" class="img-fluid" alt="Sertifikat 6">
+            <h5 class="text-center">Sertifikat 6</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center">Sertifikat 4</h5>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Network_Defense.jpg" class="img-fluid" alt="Sertifikat 5">
+            <h5 class="text-center">Sertifikat 5</h5>
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Networking_Basics.jpg" class="img-fluid" alt="Sertifikat 6">
+            <h5 class="text-center">Sertifikat 6</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 col-sm-6">
+            <img src="/assets/certificates/Certificate_Operating_Systems_Basics..jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center">Sertifikat 4</h5>
         </div>
     </div>
 </div>
