--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -45,7 +45,7 @@ permalink: /certificates/
         </div>
         <div class="col-md-4 col-sm-6">
             <img src="/assets/certificates/Certificate_Cyber_Threat_Management.jpg" class="img-fluid" alt="Sertifikat 6">
-            <h5 class="text-center">Cyber Threat Management/h5>
+            <h5 class="text-center">Cyber Threat Management</h5>
         </div>
     </div>
     <div class="row">
