--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -7,63 +7,63 @@ permalink: /certificates/
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_PCAP.jpg" class="img-fluid" alt="Sertifikat 1">
             <h5 class="text-center">PCAP</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Python_Essentials_1.jpg" class="img-fluid" alt="Sertifikat 2">
             <h5 class="text-center">Python Essentials 1</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Python_Essentials_2.jpg" class="img-fluid" alt="Sertifikat 3">
             <h5 class="text-center">Python Essentials 2</h5>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Ethical_Hacker.jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center">Ethical Hacker</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Linux_Essentials.jpg" class="img-fluid" alt="Sertifikat 5">
             <h5 class="text-center">Linux Essentials</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Endpoint_Security.jpg" class="img-fluid" alt="Sertifikat 6">
             <h5 class="text-center">Endpoint Security</h5>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Agile_Project_Management.jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center">Agile Project Management</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Computer_Hardware_Basics.jpg" class="img-fluid" alt="Sertifikat 5">
             <h5 class="text-center">Computer Hardware Basics</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Cyber_Threat_Management.jpg" class="img-fluid" alt="Sertifikat 6">
             <h5 class="text-center">Cyber Threat Management</h5>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center">Introduction to Cybersecurity</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Network_Defense.jpg" class="img-fluid" alt="Sertifikat 5">
             <h5 class="text-center">Network Defense</h5>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Networking_Basics.jpg" class="img-fluid" alt="Sertifikat 6">
             <h5 class="text-center">Networking Basics</h5>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Operating_Systems_Basics..jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center">Operating Systems Basics</h5>
         </div>
