--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -23,49 +23,49 @@ permalink: /certificates/
     <div class="row">
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Ethical_Hacker.jpg" class="img-fluid" alt="Sertifikat 4">
-            <h5 class="text-center">Ethical Hacker</h5>
+            <h5 class="text-center mt-2">Ethical Hacker</h5>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Linux_Essentials.jpg" class="img-fluid" alt="Sertifikat 5">
-            <h5 class="text-center">Linux Essentials</h5>
+            <h5 class="text-center mt-2">Linux Essentials</h5>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Endpoint_Security.jpg" class="img-fluid" alt="Sertifikat 6">
-            <h5 class="text-center">Endpoint Security</h5>
+            <h5 class="text-center mt-2">Endpoint Security</h5>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Agile_Project_Management.jpg" class="img-fluid" alt="Sertifikat 4">
-            <h5 class="text-center">Agile Project Management</h5>
+            <h5 class="text-center mt-2">Agile Project Management</h5>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Computer_Hardware_Basics.jpg" class="img-fluid" alt="Sertifikat 5">
-            <h5 class="text-center">Computer Hardware Basics</h5>
+            <h5 class="text-center mt-2">Computer Hardware Basics</h5>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Cyber_Threat_Management.jpg" class="img-fluid" alt="Sertifikat 6">
-            <h5 class="text-center">Cyber Threat Management</h5>
+            <h5 class="text-center mt-2">Cyber Threat Management</h5>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Introduction_to_Cybersecurity.jpg" class="img-fluid" alt="Sertifikat 4">
-            <h5 class="text-center">Introduction to Cybersecurity</h5>
+            <h5 class="text-center mt-2">Introduction to Cybersecurity</h5>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Network_Defense.jpg" class="img-fluid" alt="Sertifikat 5">
-            <h5 class="text-center">Network Defense</h5>
+            <h5 class="text-center mt-2">Network Defense</h5>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Networking_Basics.jpg" class="img-fluid" alt="Sertifikat 6">
-            <h5 class="text-center">Networking Basics</h5>
+            <h5 class="text-center mt-2">Networking Basics</h5>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4 col-sm-6 mb-3">
             <img src="/assets/certificates/Certificate_Operating_Systems_Basics..jpg" class="img-fluid" alt="Sertifikat 4">
-            <h5 class="text-center">Operating Systems Basics</h5>
+            <h5 class="text-center mt-2">Operating Systems Basics</h5>
         </div>
     </div>
 </div>
