--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -64,7 +64,7 @@ permalink: /certificates/
     </div>
     <div class="row">
         <div class="col-md-4 col-sm-6 mb-1">
-            <img src="/assets/certificates/Certificate_Operating_Systems_Basics..jpg" class="img-fluid" alt="Sertifikat 4">
+            <img src="/assets/certificates/Certificate_Operating_Systems_Basics.jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center mt-2">Operating Systems Basics</h5>
         </div>
     </div>
