--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -67,5 +67,9 @@ permalink: /certificates/
             <img src="/assets/certificates/Certificate_Operating_Systems_Basics.jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center mt-2">Operating Systems Basics</h5>
         </div>
+        <div class="col-md-4 col-sm-6 mb-1">
+            <img src="/assets/certificates/Certificate_Introduction_to_Cybersecurity_Awareness.jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center mt-2">Cybersecurity Awareness</h5>
+        </div>
     </div>
 </div>
