Add : Add Certificites

--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -71,5 +71,9 @@ permalink: /certificates/
             <img src="/assets/certificates/Certificate_Introduction_to_Cybersecurity_Awareness.jpg" class="img-fluid" alt="Sertifikat 4">
             <h5 class="text-center mt-2">Cybersecurity Awareness</h5>
         </div>
+        <div class="col-md-4 col-sm-6 mb-1">
+            <img src="/assets/certificates/Certificate_Data_Science_&_Analytics.jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center mt-2">Data Science & Anlaytics</h5>
+        </div>
     </div>
 </div>
