--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -76,4 +76,10 @@ permalink: /certificates/
             <h5 class="text-center mt-2">Data Science & Anlaytics</h5>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-4 col-sm-6 mb-1">
+            <img src="/assets/certificates/Certificate_Belajar_Dasar_Pemrograman_Web.jpg" class="img-fluid" alt="Sertifikat 4">
+            <h5 class="text-center mt-2">Belajar Dasar Pemrograman Web</h5>
+        </div>
+    </div>
 </div>
