--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -7,7 +7,7 @@ permalink: /certificates/
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-4 col-sm-6 mb-1">
+        <div class="col-md-4 col-sm-6 mb-1 border">
             <img src="/assets/certificates/Certificate_PCAP.jpg" class="img-fluid" alt="Sertifikat 1">
             <h5 class="text-center mt-2">PCAP</h5>
         </div>
