--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -81,5 +81,9 @@ permalink: /certificates/
             <img src="/assets/certificates/Certificate_Belajar_Dasar_Pemrograman_Web.jpg" class="img-fluid border border-dark" alt="">
             <h5 class="text-center mt-2">Belajar Dasar Pemrograman Web</h5>
         </div>
+        <div class="col-md-4 col-sm-6 mb-1">
+            <img src="/assets/certificates/Certificate_Foundations_of_Coding_Front_End.jpg" class="img-fluid border border-dark" alt="">
+            <h5 class="text-center mt-2">Foundations of Coding Front-End</h5>
+        </div>
     </div>
 </div>
